--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -20,6 +20,17 @@ blobStorage:
   accountName: ''
   accessKey: ''
 
+migration:
+  secret: ''
+  serviceBus:
+    connectionString: ''
+    queueName: ''
+
+listmonk:
+  url: ''
+  username: ''
+  password: ''
+
 vapid:
   publicKey: ''
   privateKey: ''
@@ -72,7 +83,7 @@ auth:
 frontendPWA:
   priorityClassName: production-workload
 
-  replicaCount: 1
+  replicaCount: 3
 
   image:
     repository: ghcr.io/uzh-bf/klicker-uzh/frontend-pwa
@@ -112,7 +123,7 @@ frontendPWA:
 frontendManage:
   priorityClassName: production-workload
 
-  replicaCount: 1
+  replicaCount: 2
 
   image:
     repository: ghcr.io/uzh-bf/klicker-uzh/frontend-manage
@@ -192,7 +203,7 @@ frontendControl:
 backendGraphql:
   priorityClassName: production-workload
 
-  replicaCount: 1
+  replicaCount: 3
 
   image:
     repository: ghcr.io/uzh-bf/klicker-uzh/backend-docker
