--- a/deploy/env-prod-v3/helmfile.yaml
+++ b/deploy/env-prod-v3/helmfile.yaml
@@ -18,6 +18,17 @@ releases:
           accountName: '{{ requiredEnv "BLOB_STORAGE_ACCOUNT_NAME" }}'
           accessKey: '{{ requiredEnv "BLOB_STORAGE_ACCESS_KEY" }}'
 
+        migration:
+          secret: '{{ requiredEnv "MIGRATION_SECRET" }}'
+          serviceBus:
+            connectionString: '{{ requiredEnv "MIGRATION_SERVICE_BUS_CONNECTION_STRING" }}'
+            queueName: '{{ requiredEnv "MIGRATION_SERVICE_BUS_QUEUE_NAME" }}'
+
+        listmonk:
+          url: '{{ requiredEnv "LISTMONK_URL" }}'
+          username: '{{ requiredEnv "LISTMONK_USERNAME" }}'
+          password: '{{ requiredEnv "LISTMONK_PASSWORD" }}'
+
         cron:
           token: '{{ requiredEnv "CRON_TOKEN" }}'
 
@@ -30,7 +41,6 @@ releases:
             tag: '{{ requiredEnv "APP_VERSION" }}'
 
         frontendPWA:
-          replicaCount: 1
           image:
             tag: '{{ requiredEnv "APP_VERSION" }}'
 
@@ -38,7 +48,6 @@ releases:
           sentryDSN: '{{ env "SENTRY_DSN_PWA" }}'
 
         frontendManage:
-          replicaCount: 1
           image:
             tag: '{{ requiredEnv "APP_VERSION" }}'
 
@@ -46,7 +55,6 @@ releases:
           sentryDSN: '{{ env "SENTRY_DSN_MANAGE" }}'
 
         frontendControl:
-          replicaCount: 1
           image:
             tag: '{{ requiredEnv "APP_VERSION" }}'
 
@@ -55,7 +63,6 @@ releases:
 
 
         backendGraphql:
-          replicaCount: 1
           image:
             tag: '{{ requiredEnv "APP_VERSION" }}'
 
