chore(apps/func-migration*): update local settings to reflect needed variables

--- a/apps/func-migration-v2-export/local.settings.template
+++ b/apps/func-migration-v2-export/local.settings.template
@@ -11,6 +11,10 @@
     "MIGRATION_SERVICE_BUS_QUEUE_NAME": "",
     "MIGRATION_BLOB_EXPORT_CONNECTION_STRING": "",
     "MIGRATION_BLOB_STORAGE_PATH": "",
-    "MIGRATION_MONGO_CONNECTION_STRING": ""
+    "MIGRATION_MONGO_CONNECTION_STRING": "",
+    "LISTMONK_USER": "",
+    "LISTMONK_PASS": "",
+    "LISTMONK_URL": "",
+    "LISTMONK_TEMPLATE_MIGRATION_RUNNING_SESSION": -1
   }
 }
