fix(deploy): add missing LISTMONK_TEMPLATE_MIGRATION_REQUEST

--- a/deploy/env-prod-v3/helmfile.yaml
+++ b/deploy/env-prod-v3/helmfile.yaml
@@ -28,6 +28,8 @@ releases:
           url: '{{ requiredEnv "LISTMONK_URL" }}'
           username: '{{ requiredEnv "LISTMONK_USER" }}'
           password: '{{ requiredEnv "LISTMONK_PASS" }}'
+          templates:
+            migrationRequest: '{{ requiredEnv "LISTMONK_TEMPLATE_MIGRATION_REQUEST" }}'
 
         cron:
           token: '{{ requiredEnv "CRON_TOKEN" }}'
