--- a/apps/func-migration-v2-export/tsconfig.json
+++ b/apps/func-migration-v2-export/tsconfig.json
@@ -1,7 +1,10 @@
 {
-  "extends": [
-    "@tsconfig/node18/tsconfig.json",
-    "@tsconfig/recommended/tsconfig.json"
-  ],
-  "include": ["src/**/*"]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es6",
+    "outDir": "dist",
+    "rootDir": ".",
+    "sourceMap": true,
+    "strict": false
+  }
 }
