--- a/apps/func-migration-v3-import/tsconfig.json
+++ b/apps/func-migration-v3-import/tsconfig.json
@@ -1,5 +1,10 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["src/**/*", "src/client"],
-  "compilerOptions": {}
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es6",
+    "outDir": "dist",
+    "rootDir": ".",
+    "sourceMap": true,
+    "strict": false
+  }
 }
