--- a/apps/func-response-processor/.funcignore
+++ b/apps/func-response-processor/.funcignore
@@ -2,9 +2,12 @@
 *.ts
 .git*
 .vscode
+local.settings.json
+test
+getting_started.md
+node_modules/@types/
+node_modules/azure-functions-core-tools/
+node_modules/typescript/
 __azurite_db*__.json
 __blobstorage__
 __queuestorage__
-local.settings.json
-test
-tsconfig.json
