--- a/.github/workflows/v3_klickeruzhprod-migration-import(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-import(qa).yml
@@ -37,6 +37,9 @@ jobs:
         run: |
           pnpm run build --scope @klicker-uzh/func-migration-v3-import
           pnpm prune --prod --config.ignore-scripts=true
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+          cp -LR node_modules tmp && rm -rf node_modules && mv tmp node_modules
+          popd
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
