--- a/.github/workflows/v3_klickeruzhprod-migration-export(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-export(qa).yml
@@ -35,11 +35,11 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pnpm run build --scope @klicker-uzh/func-migration-v2-export
-          pnpm prune --prod --config.ignore-scripts=true
+          # pnpm prune --prod --config.ignore-scripts=true
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           cp -LR node_modules tmp && rm -rf node_modules && mv tmp node_modules
           popd
+          pnpm run build --scope @klicker-uzh/func-migration-v2-export
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
