--- a/apps/func-incoming-responses/package.json
+++ b/apps/func-incoming-responses/package.json
@@ -11,7 +11,8 @@
     "@azure/functions": "4.0.0-alpha.11",
     "@azure/service-bus": "7.9.0",
     "@sentry/node": "7.52.1",
-    "jsonwebtoken": "9.0.1"
+    "jsonwebtoken": "9.0.1",
+    "undici": "5.23.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
