--- a/apps/func-response-processor/package.json
+++ b/apps/func-response-processor/package.json
@@ -14,8 +14,7 @@
     "ioredis": "5.3.2",
     "jsonwebtoken": "9.0.1",
     "md5": "2.3.0",
-    "ramda": "0.29.0",
-    "undici": "5.23.0"
+    "ramda": "0.29.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
