chore(ci): more experiments

--- a/.github/workflows/v3_klickeruzhprod-migration-import(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-import(qa).yml
@@ -30,7 +30,11 @@ jobs:
           version: 8.6.12
           run_install: |
             - recursive: true
-              args: [--frozen-lockfile, --strict-peer-dependencies, --shamefully-hoist, --filter, @klicker-uzh/func-migration-v3-import]
+              args: |
+                - --frozen-lockfile
+                - --strict-peer-dependencies
+                - --shamefully-hoist
+                - --filter @klicker-uzh/func-migration-v3-import
 
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
