--- a/.github/workflows/v3_klickeruzhprod-migration-import.yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-import.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v2
@@ -26,18 +26,15 @@ jobs:
           version: 8.6.12
           run_install: |
             - recursive: true
-              args: |
-                - --frozen-lockfile
-                - --strict-peer-dependencies
-                - --shamefully-hoist
-                - --filter @klicker-uzh/func-migration-v3-import
+              args: [--frozen-lockfile, --strict-peer-dependencies, --shamefully-hoist, --filter @klicker-uzh/func-migration-v2-export]
 
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
+          echo 'config node-linker=hoisted' > .npmrc
           pnpm run build --scope @klicker-uzh/func-migration-v3-import
           pnpm prune --prod --config.ignore-scripts=true
-          cp -Rf node_modules ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/node_modules
+          xcopy node_modules ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/node_modules /s /e /y /i
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
