--- a/.github/workflows/v3_klickeruzhprod-responses.yml
+++ b/.github/workflows/v3_klickeruzhprod-responses.yml
@@ -26,7 +26,7 @@ jobs:
           version: 8.6.12
           run_install: |
             - recursive: true
-              args: [--frozen-lockfile, --strict-peer-dependencies, --shamefully-hoist, --filter @klicker-uzh/func-incoming-responses]
+              args: [--frozen-lockfile, --strict-peer-dependencies, --shamefully-hoist, '--filter @klicker-uzh/func-incoming-responses']
 
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
