chore(ci): build without scope

--- a/.github/workflows/v3_klickeruzhprod-migration-export(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-export(qa).yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           pushd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           pnpm install --frozen-lockfile --ignore-scripts --filter . --shamefully-hoist --strict-peer-dependencies
-          pnpm run build --scope .
+          pnpm run build
           pnpm prune --prod --config.ignore-scripts=true
           popd
           cp -Rf node_modules ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/node_modules
