xxchore(ci): workflow update

--- a/.github/workflows/v3_klickeruzhprod-responses(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-responses(qa).yml
@@ -28,16 +28,20 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8.6.12
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile, --strict-peer-dependencies]
 
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pushd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          pnpm install --frozen-lockfile --ignore-scripts --filter . --shamefully-hoist --strict-peer-dependencies
+          pnpm run prune --scope @klicker-uzh/func-incoming-responses
+          pushd out
+          pnpm install --frozen-lockfile --ignore-scripts --shamefully-hoist --strict-peer-dependencies
           pnpm run build
           pnpm prune --prod --config.ignore-scripts=true
+          cp -Rf node_modules/* ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/node_modules/
           popd
-          cp -Rf node_modules ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/node_modules
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
