--- a/package.json
+++ b/package.json
@@ -74,5 +74,6 @@
     "node": "18.17.0",
     "pnpm": "8.6.12"
   },
-  "packageManager": "pnpm@8.6.12"
+  "packageManager": "pnpm@8.6.12",
+  "main": "apps/function-app/dist/index.js"
 }
