--- a/package.json
+++ b/package.json
@@ -75,5 +75,5 @@
     "pnpm": "8.6.12"
   },
   "packageManager": "pnpm@8.6.12",
-  "main": "apps/function-app/dist/index.js"
+  "main": "apps/func/dist/index.js"
 }
