--- a/.github/workflows/v3_klickeruzhprod-response-processor(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-response-processor(qa).yml
@@ -33,12 +33,13 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pushd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          pnpm install --frozen-lockfile --ignore-scripts --filter . --shamefully-hoist --strict-peer-dependencies
+          pnpm dlx turbo prune --scope @klicker-uzh/func-response-processor
+          pushd out
+          echo "node-linker=hoisted" > .npmrc
+          pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
           pnpm run build
-          pnpm prune --prod --config.ignore-scripts=true
+          mv apps/func-response-processor apps/func
           popd
-          cp -Rf node_modules ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/node_modules
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
@@ -46,5 +47,5 @@ jobs:
         with:
           app-name: 'klickeruzhprod-response-processor'
           slot-name: 'qa'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: out
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_36EB12B3E64C4803BA587F03A5F2E446 }}
