--- a/.github/workflows/v3_klickeruzhprod-response-processor.yml
+++ b/.github/workflows/v3_klickeruzhprod-response-processor.yml
@@ -28,17 +28,18 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pushd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          pnpm install --frozen-lockfile --ignore-scripts --filter . --shamefully-hoist --strict-peer-dependencies
+          pnpm dlx turbo prune --scope @klicker-uzh/func-response-processor
+          pushd out
+          echo "node-linker=hoisted" > .npmrc
+          pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
           pnpm run build
-          pnpm prune --prod --config.ignore-scripts=true
+          mv apps/func-response-processor apps/func
           popd
-          cp -Rf node_modules ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/node_modules
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
         with:
           app-name: 'klickeruzhprod-response-processor'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: out
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2D29422CC7724D749B4FE2DB880C2E19 }}
