chore(ci): move host.json to root-level of functions package

--- a/.github/workflows/v3_klickeruzhprod-migration-import.yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-import.yml
@@ -34,6 +34,7 @@ jobs:
           pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
           pnpm run build
           mv apps/func-migration-v3-import apps/func
+          mv apps/func/host.json .
           popd
 
       - name: 'Run Azure Functions Action'
