--- a/.github/workflows/v3_klickeruzhprod-migration-import(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-import(qa).yml
@@ -38,6 +38,7 @@ jobs:
           echo "node-linker=hoisted" > .npmrc
           pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
           pnpm run build
+          cp -R packages/prisma node_modules/@klicker-uzh/
           mv apps/func-migration-v3-import apps/func
           mv apps/func/host.json .
           popd
