fix(ci): copy schema.prisma to azure function for import

--- a/.github/workflows/v3_klickeruzhprod-migration-import.yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-import.yml
@@ -33,9 +33,9 @@ jobs:
           echo "node-linker=hoisted" > .npmrc
           pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
           pnpm run build
-          cp -R packages/prisma node_modules/@klicker-uzh/
           mv apps/func-migration-v3-import apps/func
           mv apps/func/host.json .
+          cp packages/prisma/dist/schema.prisma apps/func/dist/schema.prisma
           mkdir node_modules/@klicker-uzh
           popd
 
