--- a/.github/workflows/v3_klickeruzhprod-migration-import.yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-import.yml
@@ -41,6 +41,7 @@ jobs:
           pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
           mkdir -p node_modules/@klicker-uzh apps/func-migration-v3-import/node_modules/@klicker-uzh
           cp -Rfl packages/prisma node_modules/@klicker-uzh/
+          rm -f apps/func-migration-v3-import/node_modules/@klicker-uzh/prisma
           cp -Rfl packages/prisma apps/func-migration-v3-import/node_modules/@klicker-uzh/
           pnpm run build
           mv apps/func-migration-v3-import apps/func
