chore(ci): trigger func deploy

--- a/.github/workflows/v3_klickeruzhprod-migration-export.yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-export.yml
@@ -1,4 +1,4 @@
-name: Build and deploy func-migration-v2-export to Function App (Production)
+name: Build and deploy func-migration-v2-export to Azure Function App (Production)
 
 on:
   push:
