--- a/.github/workflows/v3_klickeruzhprod-migration-import.yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-import.yml
@@ -1,4 +1,4 @@
-name: Build and deploy func-migration-v3-import to Function App (Production)
+name: Build and deploy func-migration-v3-import to Azure Function App (Production)
 
 on:
   push:
