chore(ci): trigger func workflows on all commits

--- a/.github/workflows/v3_klickeruzhprod-migration-export.yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-export.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - 'v3'
       - 'CI'
-    paths:
-      - 'apps/func-migration-v2-export/**'
-      - '.github/workflows/v3_klickeruzhprod-migration-export**'
+    # paths:
+    #   - 'apps/func-migration-v2-export/**'
+    #   - '.github/workflows/v3_klickeruzhprod-migration-export**'
   workflow_dispatch:
 
 env:
