--- a/.github/workflows/v3_klickeruzhprod-migration-import.yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-import.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - 'v3'
       - 'CI'
-    paths:
-      - 'apps/func-migration-v3/**'
-      - '.github/workflows/v3_klickeruzhprod-migration-import**'
+    # paths:
+    #   - 'apps/func-migration-v3/**'
+    #   - '.github/workflows/v3_klickeruzhprod-migration-import**'
   workflow_dispatch:
 
 env:
