--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@apollo/client": "3.8.0",
     "@bigheads/core": "0.3.3",
+    "@capacitor/android": "5.3.0",
     "@capacitor/core": "5.3.0",
     "@capacitor/ios": "5.3.0",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
