--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-medium-image-zoom": "4.4.3",
+    "react-text-transition": "^3.1.0",
     "recharts": "2.7.2",
     "tailwind-merge": "1.14.0",
     "tailwindcss": "3.3.3",
