--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -57,5 +57,8 @@
   },
   "volta": {
     "extends": "../../package.json"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "0.5.9"
   }
 }
