--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -20,12 +20,13 @@
     "@gabrielcsapo/docusaurus-plugin-matomo": "0.1.2",
     "@mdx-js/react": "2.3.0",
     "@tsconfig/docusaurus": "1.0.5",
-    "@uzh-bf/design-system": "2.0.14",
+    "@uzh-bf/design-system": "2.1.0",
     "autoprefixer": "10.4.14",
     "cross-env": "7.0.3",
     "nodemon": "3.0.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.27",
+    "postcss-import": "15.1.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "prettier-plugin-tailwindcss": "0.4.1",
@@ -36,7 +37,7 @@
     "recharts": "2.7.2",
     "tailwind-merge": "1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.0.4"
+    "typescript": "5.1.6"
   },
   "scripts": {
     "build": "docusaurus build",
