improve qr modals

--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -25,6 +25,7 @@
     "generate-password": "1.7.0",
     "graphql": "16.7.1",
     "graphql-ws": "5.13.1",
+    "html-to-image": "1.11.11",
     "is-hotkey": "0.2.0",
     "js-search": "2.0.1",
     "localforage": "1.10.0",
