refetch on creation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
     "connectionId": "uzh-bf",
     "projectKey": "uzh-bf_klicker-uzh"
   },
-  "azureFunctions.templateFilter": "Verified"
+  "azureFunctions.templateFilter": "Verified",
+  "files.associations": {
+    "plyconfig.json": "jsonc"
+  }
 }
