--- a/apps/auth/.env.production
+++ b/apps/auth/.env.production
@@ -1,4 +1,4 @@
-COOKIE_DOMAIN=klicker.uzh.ch
+COOKIE_DOMAIN=.klicker.uzh.ch
 NEXTAUTH_URL=https://auth.klicker.uzh.ch
 EDUID_CLIENT_ID=uzh_klicker_auth
 EDUID_WELL_KNOWN=https://login.eduid.ch/.well-known/openid-configuration
