--- a/apps/frontend-control/.env.production
+++ b/apps/frontend-control/.env.production
@@ -1,4 +1,4 @@
-COOKIE_DOMAIN=klicker.uzh.ch
+COOKIE_DOMAIN=.klicker.uzh.ch
 API_DOMAIN=backend-sls.$COOKIE_DOMAIN
 S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
