--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -1,15 +1,15 @@
-COOKIE_DOMAIN=klicker.local
-API_DOMAIN=api.klicker.local
+COOKIE_DOMAIN=.klicker.com
+API_DOMAIN=api.klicker.com
 S3_PATHNAME="/klicker-uzh-dev/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
 NEXT_PUBLIC_IMAGE_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/img"
-NEXT_PUBLIC_ADD_RESPONSE_URL="http://func-responses.klicker.local/api/AddResponse"
-NEXT_PUBLIC_API_URL="http://api.klicker.local/api/graphql"
+NEXT_PUBLIC_ADD_RESPONSE_URL="http://func-responses.klicker.com/api/AddResponse"
+NEXT_PUBLIC_API_URL="http://api.klicker.com/api/graphql"
 NEXT_PUBLIC_API_URL_SSR=http://127.0.0.1:3000/api/graphql
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BKgVsZFXdusxzKMrOTIJiAtiou8STnRcwbv_nvlseghjAUAlfmWKpCKBcfY_D-DH9PPYBunrJRh4uNeNF7a3TU4"
 
-NEXT_PUBLIC_PWA_URL="http://pwa.klicker.local"
-NEXT_PUBLIC_MANAGE_URL="http://manage.klicker.local"
-NEXT_PUBLIC_CONTROL_URL="http://control.klicker.local"
+NEXT_PUBLIC_PWA_URL="http://pwa.klicker.com"
+NEXT_PUBLIC_MANAGE_URL="http://manage.klicker.com"
+NEXT_PUBLIC_CONTROL_URL="http://control.klicker.com"
