--- a/apps/frontend-pwa/.env.qa
+++ b/apps/frontend-pwa/.env.qa
@@ -1,4 +1,4 @@
-COOKIE_DOMAIN=klicker-qa.bf-app.ch
+COOKIE_DOMAIN=.klicker-qa.bf-app.ch
 API_DOMAIN=backend-sls.$COOKIE_DOMAIN
 S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
