--- a/apps/frontend-manage/.env.production
+++ b/apps/frontend-manage/.env.production
@@ -1,5 +1,5 @@
 COOKIE_DOMAIN=.klicker.uzh.ch
-API_DOMAIN=backend-sls.$COOKIE_DOMAIN
+API_DOMAIN=backend-sls$COOKIE_DOMAIN
 S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
