--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -1,5 +1,5 @@
 COOKIE_DOMAIN=.klicker.com
-API_DOMAIN=api.klicker.com
+API_DOMAIN=api$COOKIE_DOMAIN
 S3_PATHNAME="/klicker-uzh-dev/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
