--- a/apps/frontend-pwa/.env.qa
+++ b/apps/frontend-pwa/.env.qa
@@ -5,8 +5,8 @@ S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
 NEXT_PUBLIC_IMAGE_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/img"
-NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses.$COOKIE_DOMAIN/api/AddResponse"
-NEXT_PUBLIC_API_URL="https://backend-sls.$COOKIE_DOMAIN/api/graphql"
+NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses$COOKIE_DOMAIN/api/AddResponse"
+NEXT_PUBLIC_API_URL="https://backend-sls$COOKIE_DOMAIN/api/graphql"
 NEXT_PUBLIC_API_URL_SSR="http://klicker-uzh-qa-klicker-uzh-v3-backend-graphql:3000/api/graphql"
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BFTs2KshUdSwCqQgZzaaCZK7h3L4pd8hjJoLk1jv1-iPN9c-_7JdLkQi5IV_k3Ml4rrx12HOkcANwVk39L_RTOM"
 
