--- a/apps/frontend-pwa/ios/App/Podfile
+++ b/apps/frontend-pwa/ios/App/Podfile
@@ -22,7 +22,7 @@ install! 'cocoapods', :disable_input_output_paths => true
 def capacitor_pods
   pod 'Capacitor', :path => '../../../../node_modules/.pnpm/@capacitor+ios@5.3.0_@capacitor+core@5.3.0/node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../../../node_modules/.pnpm/@capacitor+ios@5.3.0_@capacitor+core@5.3.0/node_modules/@capacitor/ios'
-
+  pod 'CapacitorPushNotifications', :path => '../../../../node_modules/.pnpm/@capacitor+push-notifications@5.0.6_@capacitor+core@5.3.0/node_modules/@capacitor/push-notifications'
 end
 
 target 'App' do
