--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -9,6 +9,7 @@
     "@capacitor/android": "5.3.0",
     "@capacitor/core": "5.3.0",
     "@capacitor/ios": "5.3.0",
+    "@capacitor/push-notifications": "5.0.6",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-regular-svg-icons": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
