--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -6,6 +6,10 @@
   "dependencies": {
     "@apollo/client": "3.8.3",
     "@bigheads/core": "0.3.3",
+    "@capacitor/android": "5.3.0",
+    "@capacitor/core": "5.3.0",
+    "@capacitor/ios": "5.3.0",
+    "@capacitor/push-notifications": "5.0.6",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-regular-svg-icons": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
@@ -42,6 +46,7 @@
     "yup": "1.2.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "5.3.0",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/typography": "0.5.9",
