--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -53,5 +53,9 @@
   },
   "volta": {
     "extends": "../../package.json"
+  },
+  "dependencies": {
+    "@capacitor/core": "5.3.0",
+    "@capacitor/push-notifications": "5.0.6"
   }
 }
