update service worker config and file

--- a/apps/frontend-pwa/.gitignore
+++ b/apps/frontend-pwa/.gitignore
@@ -39,6 +39,7 @@ public/sw*.js*
 public/workbox-*.js*
 public/fallback*.js*
 public/worker*.js
+public/firebase-messaging-sw*.js
 
 src/testPush.js
 
